--- a/style.css
+++ b/style.css
@@ -25,3 +25,67 @@
     text-decoration: none; /*get rid of underline*/
     font-size: 2rem; /*1 rem = 16px*/
 }
+
+.navbar__menu {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+    margin: 0 auto;
+}
+
+.navbar__item {
+    height: 80px;
+}
+
+.navbar__links {
+    color: #fff;
+    text-decoration: none;
+    height: 100%;
+    padding: 0 1rem;
+    display: flex;
+    align-items: center;
+}
+
+.navbar__links:hover {
+    color: #0ce48d;
+    transition: all 0.3s ease;
+}
+
+.navbar__btn {
+    display: flex;
+    align-items: center;
+}
+
+.navbar__btn.mobile {
+    display: none;
+}
+
+.navbar__btn.desktop {
+    display: flex;
+}
+
+.button {
+    background: #0ce48d;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    color: #fff;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+}
+
+.button:hover {
+    background: #15b856;
+    transition: all 0.3s ease;
+}
+
+.navbar__toggle {
+    display: none;
+}
+
+@media screen and (max-width: 968px) {
+    .navbar__toggle {
+        display: block;
+    }
+}
