--- a/style.css
+++ b/style.css
@@ -87,5 +87,16 @@
 @media screen and (max-width: 968px) {
     .navbar__toggle {
         display: block;
+        position: absolute;
+        right: 20px;
+        top:50%;
+        transform: translateY(-50%);
+        color: #fff;
+        z-index: 10;
+        font-size: 1.5rem;
+        border: none;
+        background: none;
+        cursor: pointer;
+        padding: 0;
     }
 }
