--- a/style.css
+++ b/style.css
@@ -65,14 +65,14 @@
 }
 
 .button {
+    display: flex;
+    align-items: center;
     background: #0ce48d;
     padding: 10px 20px;
     border: none;
     border-radius: 4px;
     color: #fff;
     text-decoration: none;
-    display: flex;
-    align-items: center;
 }
 
 .button:hover {
@@ -106,6 +106,14 @@
         align-items: center;
         position: fixed;
         top: 80px;
+        left: -100%;
+        width: 100%;
+        height: calc(100% - 80px);
+        opacity: 0;
+        transition: all 0.5s ease;
+        background: #131313;
+        z-index: 10;
+        margin: 0;
     }
 
     .navbar__menu.active {
@@ -116,6 +124,32 @@
     .navbar__item {
         width: 100%;
         display: flex;
+        justify-content: center;
+    }
+
+    .navbar__links {
+        text-align: center;
+        padding: 2rem;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+    /* surprise button */
+    .navbar__btn.desktop {
+        display: none;
+    }
+
+    .navbar__btn.mobile {
+        display: flex;
+        justify-content: center;
+        padding-bottom: 2rem;
+        width: 100%;
+    }
+
+    .button {
+        width: 80%;
+        height: 60px;
         justify-content: center;
     }
 }
